Fixed overlay z-index

--- a/themes/dm-theme-01/scss/structure-design/body.scss
+++ b/themes/dm-theme-01/scss/structure-design/body.scss
@@ -30,7 +30,7 @@ body {
     overflow: hidden;
 
     &:after {
-      z-index: 1;
+      z-index: 2; 
       opacity: 1;
       background-color: rgba( var( --dm-color-black-rgb ), 0.7 );
     }
